--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <h1 class="subhead sepel">Our Products</h1>
 <section class="defsec mightbe sec1 sepel">
 <div class="subsec1 prodash fwcloc sepel">
-    <h1 class="submnhead">Le Ash Face Whitening Cream</h1>
+    <h1 class="submnhead">Le Ash Whitening Cream</h1>
     <div class="secimage">
         <img src="./files/cream.png" class="seclogo" alt="cream">
     </div>
