--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <span class="nav_links" onclick="taketo('abtme')">About Us</span>
             <span class="nav_links prodmenu" onclick="navprodcatopen()">Our Products</span>
             <div class="products_cat prod_cat_closed">
-                <span onclick="taketo('fwcloc')" class="nav_sub_link">Face Whitening Cream</span>
+                <span onclick="taketo('fwcloc')" class="nav_sub_link">Whitening Cream</span>
                 <span onclick="taketo('hrgolloc')" class="nav_sub_link">Hair Growth Oil</span>
                 <span onclick="taketo('lpbmloc')" class="nav_sub_link">Lip Balm</span>
             </div>
@@ -72,7 +72,7 @@
     <div class="seccont">
         <!-- <h1 class="subhead">About Us</h1> -->
         <p class="content sepel">
-            Le ash face whitening cream has created huge impact in youth and it works great against acne and it clears and smoothens skin.
+            Le ash whitening cream has created huge impact in youth and it works great against acne and it clears and smoothens skin.
         </p>
         <div class="btn_area sepel">
             <button onclick="$alert('cream')" class="btn brbtn">Learn More</button><button class="btn flbtn"><a href="https://wa.link/ub4v0w" target="_blank" class="uilink">Buy Now</a></button>
@@ -227,7 +227,7 @@ Its being made by using all natural products which is good for hair strengthenin
         <div class="ftlinks_area">
             <a onclick="event.preventDefault();taketo('abtme')" class="main_link ftlink">About Us</a>
             <a onclick="event.preventDefault();taketo('fwcloc')" class="main_link ftlink">Our Products</a>
-            <a  onclick="event.preventDefault();taketo('fwcloc')" class="sub_link ftlink">Le Ash Face Whitening Cream</a>
+            <a  onclick="event.preventDefault();taketo('fwcloc')" class="sub_link ftlink">Le Ash Whitening Cream</a>
                 <a onclick="event.preventDefault();$alert('cream')" class="sub_sub_link ftlink">Why Le Ash Face Whitening Cream?</a>
             <a onclick="event.preventDefault();taketo('hrgolloc')" class="sub_link ftlink">Le Ash Hair Growth Oil</a>
                 <a  onclick="event.preventDefault();$alert('oil')" class="sub_sub_link ftlink">Why Le Ash Hair Growth Oil?</a>
