--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ Its being made by using all natural products which is good for hair strengthenin
             <a onclick="event.preventDefault();taketo('abtme')" class="main_link ftlink">About Us</a>
             <a onclick="event.preventDefault();taketo('fwcloc')" class="main_link ftlink">Our Products</a>
             <a  onclick="event.preventDefault();taketo('fwcloc')" class="sub_link ftlink">Le Ash Whitening Cream</a>
-                <a onclick="event.preventDefault();$alert('cream')" class="sub_sub_link ftlink">Why Le Ash Face Whitening Cream?</a>
+                <a onclick="event.preventDefault();$alert('cream')" class="sub_sub_link ftlink">Why Le Ash Whitening Cream?</a>
             <a onclick="event.preventDefault();taketo('hrgolloc')" class="sub_link ftlink">Le Ash Hair Growth Oil</a>
                 <a  onclick="event.preventDefault();$alert('oil')" class="sub_sub_link ftlink">Why Le Ash Hair Growth Oil?</a>
             <a onclick="event.preventDefault();taketo('lpbmloc')" class="sub_link ftlink">Le Ash Lip Balm</a>
