--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <p class="content sepel">
             Le ash whitening cream has created huge impact in youth and it works great against acne and it clears and smoothens skin.
         </p>
+        <h1 class="price sepel">&#8377;600</h1>
         <div class="btn_area sepel">
             <button onclick="$alert('cream')" class="btn brbtn">Learn More</button><button class="btn flbtn"><a href="https://wa.link/ub4v0w" target="_blank" class="uilink">Buy Now</a></button>
         </div>
@@ -90,6 +91,7 @@
             le ash hair growth oil is the upcoming product from the le ash cosmetics which will be available for delivery in all over india soon.
 Its being made by using all natural products which is good for hair strengthening and making the hair dandruff free
         </p>
+        <h1 class="price sepel">&#8377;000</h1>
         <div class="btn_area sepel">
             <button onclick="$alert('oil')"  class="btn brbtn">Learn More</button><button class="btn flbtn"><a href="https://wa.link/jgsudr" target="_blank" class="uilink">Buy Now</a></button>
         </div>
@@ -105,6 +107,7 @@ Its being made by using all natural products which is good for hair strengthenin
         <p class="content sepel">
             le ash Lip Balm gently soothes chapped lips. Provides deep hydration to dry lips. Works overtime across season and spreads easily. Leaves lips soft & healthy. Suits all skin types and ages
         </p>
+        <h1 class="price sepel">&#8377;180</h1>
         <div class="btn_area sepel">
             <button class="btn flbtn"><a href="https://wa.link/1w9wcp" target="_blank" class="uilink">Buy Now</a></button>
         </div>
