--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="seccont">
             <h1 class="subhead">About Us</h1>
             <p class="content">
-                Welcome everyone to Le Ash Cosmetics which is being favorate of many customers all over india from south to north. Invest in your skin, It's going to represent you for very long time.
+                Welcome everyone to Le Ash Cosmetics which is being favorite of many customers all over india from south to north. Invest in your skin, It's going to represent you for very long time.
             </p>
         </div>
     </section>
